--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = "4"
+actix-web = { version = "4", features = ["rustls"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dotenvy = "0.15"
+sqlx = { version = "0.6", features = ["mssql", "runtime-tokio-rustls", "macros", "chrono"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+jsonwebtoken = "9"
+bcrypt = "0.14"
+futures = "0.3"
+aes-gcm = "0.10"
+base64 = "0.21"
+rand = "0.8"
+anyhow = "1.0"
+scrypt = "0.8"
+aes = "0.8"
+ctr = "0.9"
+hex = "0.4"
+chrono = "0.4"
